Non-kludge fix for group btn readability
Does make every group btn a little bit wider, and makes the group markers smaller as a compromise to not add too much width.

--- a/main.css
+++ b/main.css
@@ -83,13 +83,15 @@ button{
 	background-image: url("arrow.png");
 	background-repeat: no-repeat;
 	background-position: right;
-    background-size: 29px;
+    background-size: 19px;
+	padding-right: 19px;
 }
 .openGroup{
 	background-image: url("arrowDwn.png");
 	background-repeat: no-repeat;
 	background-position: right;
-    background-size: 29px;
+    background-size: 19px;
+	padding-right: 19px;
 }
 
 #codeTA{
